<resources>
    <string name="app_name">Crocodile</string>
    <string name="app_name_ru">Крокодил</string>

    <string name="level">Уровень</string>
    <string name="rate">Рейтинг</string>
    <string name="button_level">Результат</string>

    <!--total-->
    <string name="some_error">Ошибка!!!</string>
    <string name="empty_response">Ничего нет</string>
    <string name="loading">Загрузка</string>
    <string name="double_back_exit">Нажмите еще раз для выхода</string>
    <string name="empty"></string>

    <!--menu-->
    <string name="menu_single_play">Обычная игра</string>
    <string name="menu_time_play">На время</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_send">Предложить</string>
    <string name="menu_rules">Правила</string>
    <string name="menu_dev">О приложении</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_other">Дополнительно</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="action_settings">Settings</string>

    <!-- Activity Main -->

    <string name="title">Крокодил</string>
    <string name="select_level">Выберте сложность</string>
    <string name="btn_title_hard">Мозговыносяще</string>
    <string name="btn_title_medium">Терпимо</string>
    <string name="btn_title_easy">Легко</string>
    <!--path to font-->
    <string name="font_default">fonts/pangolin.ttf</string>
    <string name="level_easy">1</string>
    <string name="level_medium">2</string>
    <string name="level_hard">3</string>

    <!-- End Activity Main  -->

    <!--Activity Send-->
    <string name="tv_send_title">Введите Ваше предложение в поле ниже и мы добавим его как можно скорее!</string>
    <string name="send_phrases">Новое слово или фраза</string>
    <string name="btn_send">Отправить</string>
    <string name="tv_radio_title">Предполагаемая сложность</string>
    <string name="btn_success_response">Отлично</string>
    <string name="msg_success_response">Ваше предложение было принято на рассмотрение</string>

    <!-- End Activity Send  -->

    <!--Setting Activity-->
    <string name="time_title">Настройки времени</string>
    <string name="time_list_summary">Выберите один из предложеннных вариантов</string>
    <string name="time_summary">Введите свои настройки времени</string>
    <string name="time_message">Введите свое время раунда в секундах</string>
    <string name="default_time">60</string>
    <string name="btn_cancel">Отмена</string>

</resources>
