<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_single_play"
            android:title="@string/menu_single_play" />
        <item
            android:id="@+id/menu_time_play"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/menu_time_play" />
        <item
            android:id="@+id/menu_send"
            android:icon="@drawable/ic_cloud_upload_black_24dp"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/menu_rules"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="@string/empty">
        <menu>
            <item
                android:id="@+id/menu_dev"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_dev" />
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_exit" />
        </menu>
    </item>



</menu>