<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_send_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textSize="@dimen/text.20"
            android:gravity="center"
            android:text="@string/tv_send_title"
            android:textColor="@color/primary_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_phrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_send_title"
            android:layout_marginTop="@dimen/child_margin_top">

            <EditText
                android:id="@+id/et_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_phrases"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_radio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ti_phrase"
            android:gravity="center"
            android:textSize="@dimen/text.18"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColor="@color/primary_text"
            android:text="@string/tv_radio_title"/>

        <RadioGroup
            android:id="@+id/rg_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_radio_title"
            android:gravity="center"
            android:layout_marginTop="@dimen/child_margin_top"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_title_easy"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text.16"
                android:checked="true" />
            <RadioButton android:id="@+id/radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/btn_title_medium" />
            <RadioButton android:id="@+id/radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/btn_title_hard" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_level"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/btn_send" />


    </RelativeLayout>
</LinearLayout>
