<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".screen.MainActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_level"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:text="@string/select_level"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text.20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_hard"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_items_margin"
            android:layout_marginRight="@dimen/card_items_margin"
            android:layout_marginTop="@dimen/child_margin_top"
            android:background="@drawable/roundrect"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:text="@string/btn_title_hard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_medium" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_easy"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_items_margin"
            android:layout_marginRight="@dimen/card_items_margin"
            android:layout_marginTop="@dimen/child_margin_top"
            android:background="@drawable/roundrect"
            android:text="@string/btn_title_easy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_level" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_medium"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_items_margin"
            android:layout_marginRight="@dimen/card_items_margin"
            android:layout_marginTop="@dimen/child_margin_top"
            android:background="@drawable/roundrect"
            android:text="@string/btn_title_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_easy" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>